--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
 <body>
 <div class="info">
-<h1>Hello World! version2</h1>
+<h1>Hello World!</h1>
 <p><span>Server&nbsp;address:</span> <span>server_address</span></p>
 <p><span>Server&nbsp;name:</span> <span>server_hostname</span></p>
 <p class="smaller"><span>Date:</span> <span>server_date</span></p>
